# Encoder_2018

Encoder_2018-master/: CMakeLists.txt
Encoder_2018-master/Encoder_2018-master/: README.md
Encoder_2018-master/Encoder_2018-master/NewProject/: ArbolBinario.h  NodoDic_1.h  codifica.cpp  codifica.h  main.cpp
Encoder_2018-master/NewProject/: ArbolAVL_01.cpp  ArbolAVL_01.h  ArbolBinario.h  NodoArbol.h  NodoArbolAVL__01.h  codifica.cpp  codifica.h
NewProject/: CMakeLists.txt  codifica.cpp  codifica.h  main.cpp
no-hay-forma-la-concha-de-la-lora/Nuevooooo/: Arbol.h  CMakeLists.txt  FileManager.h  main.cpp
